--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,7 @@
     <string name="remark_items">Items</string>
     <string name="remark_printer" translatable="false">Printer</string>
     <string name="remark_wholesale">Wholesale</string>
+    <string name="remark_sinkron" translatable="false">Sinkron data</string>
     <string name="remark_profile">Profil</string>
     <string name="openDrawer">Buka drawer</string>
     <string name="closeDrawer">Tutup drawer</string>
@@ -242,6 +243,8 @@
     <string name="tunai" translatable="false">Tunai </string>
     <string name="terima_kasih" translatable="false">TERIMA KASIH</string>
     <string name="selamat_belanja_kembali" translatable="false">SELAMAT BELANJA KEMBALI</string>
+    <string name="sinkron_berhasil" translatable="false">Sinkron berhasil</string>
+    <string name="sinkron_data_terakhir" translatable="false">Sinkron data terakhir : </string>
 
     <string name="connect" translatable="false">Search for and connect a Bluetooth printer</string>
     <string name="txt_content" translatable="false">&quot;&quot;</string>
@@ -301,15 +304,13 @@
         <item>Satuan</item>
         <item>Laporan</item>
         <item>Printer</item>
+        <item>Sinkron data</item>
         <item>Wholesale</item>
         <item>Profil</item>
     </string-array>
 
     <string-array name="dummy_supplier">
-        <item>PT. Indomaret, Tbk</item>
-        <item>PT. Alfamart, Tbk</item>
-        <item>Sinar Harapan</item>
-        <item>CV. Pacific</item>
+        <item>Default</item>
     </string-array>
 
     <string-array name="daftar_report">
