--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -246,6 +246,9 @@
     <string name="sinkron_berhasil" translatable="false">Sinkron berhasil</string>
     <string name="sinkron_data_terakhir" translatable="false">Sinkron data terakhir : </string>
     <string name="duplikasi_kategori" translatable="false">Nama kategori ini sudah ada</string>
+    <string name="duplikasi_brand" translatable="false">Nama brand ini sudah ada</string>
+    <string name="duplikasi_unit" translatable="false">Nama unit ini sudah ada</string>
+    <string name="duplikasi_item" translatable="false">Nama item ini sudah ada</string>
 
     <string name="connect" translatable="false">Search for and connect a Bluetooth printer</string>
     <string name="txt_content" translatable="false">&quot;&quot;</string>
