--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,6 +156,7 @@
     <string name="konfirmasi_pembelian">Konfirmasi Pembelian</string>
     <string name="report_transaction" translatable="false">Report Transaction</string>
     <string name="histori_penjualan" translatable="false">Histori Penjualan</string>
+    <string name="histori_pembelian" translatable="false">Histori Pembelian</string>
     <string name="report_transaction_detail">Report Transaction Detail</string>
     <string name="report_pembelian">Report Pembelian</string>
     <string name="report_pembelian_detail">Detail Report Pembelian</string>
