--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -304,6 +304,7 @@
     <string name="tunai" translatable="false">Tunai </string>
     <string name="terima_kasih" translatable="false">TERIMA KASIH</string>
     <string name="powered_by_poskita" translatable="false">POWERED BY POSKITA</string>
+    <string name="registrasi_gagal" translatable="false">Registrasi gagal</string>
     <string name="selamat_belanja_kembali" translatable="false">SELAMAT BELANJA KEMBALI</string>
     <string name="sinkron_berhasil" translatable="false">Sinkron berhasil</string>
     <string name="sinkron_data_terakhir" translatable="false">Sinkron data terakhir : </string>
