--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -312,6 +312,7 @@
     <string name="email_tidak_sah" translatable="false">Email tidak sah</string>
     <string name="selamat_belanja_kembali" translatable="false">SELAMAT BELANJA KEMBALI</string>
     <string name="sinkron_berhasil" translatable="false">Sinkron berhasil</string>
+    <string name="sinkron_gagal" translatable="false">Sinkron gagal</string>
     <string name="sinkron_data_terakhir" translatable="false">Sinkron data terakhir : </string>
     <string name="duplikasi_kategori" translatable="false">Nama kategori ini sudah ada</string>
     <string name="duplikasi_brand" translatable="false">Nama brand ini sudah ada</string>
